# MKT-KSA-Geolocation-Security

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EVALUATION.md  MONITORING_DASHBOARD.md  PROJECT_OVERVIEW_نبذة_عن_المشروع.md  README.md  README_AR.md  README_EN.md  SECURITY.md  audit.toml  cbindgen.toml  deny.toml  license
.cargo-home/: .global-cache
.cargo-home/registry/cache/index.crates.io-1949cf8c6b5b557f/: actix-web-4.11.0.crate  ammonia-4.1.1.crate  arraydeque-0.5.1.crate  cc-1.2.32.crate  cc-1.2.33.crate  html5ever-0.35.0.crate  ipnetwork-0.21.1.crate  markup5ever-0.35.0.crate  match_token-0.35.0.crate  maxminddb-0.26.0.crate  mysql_async-0.36.1.crate  pqcrypto-internals-0.2.11.crate  pqcrypto-traits-0.3.5.crate  proc-macro2-1.0.97.crate  rust-ini-0.21.1.crate  rust-ini-0.21.2.crate  thiserror-2.0.14.crate  uuid-1.18.0.crate  windows-targets-0.53.3.crate  yaml-rust2-0.10.3.crate
.github/: CODEOWNERS  FUNDING.yml  audit.toml  dependabot.yml  pull_request_template.md
.github/actions/secure-workspace/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  ci.yml_  clippy.yml  codacy.yml  codeql.yml  dependabot-auto-merge.yml  generator-generic-ossf-slsa3-publish.yml  release-binaries.yml  rust-clippy.yml  rust.yml  security-gates.yml  security-performance-scheduled.yml  security-profile-matrix.yml
archive/: AI_Development_Log.md  dashboard.html
archive/docs/: AI_Chat_Briefing.md  AI_LOG.md  Addons.md  Integration_Templates.md  Module_Contracts.md  OAuth2_Implementation_Report.md  Test_Plan.md
archive/tests/: http_integration.rs
docs/: Comprehensive_Project_Report.md  DEPENDENCY_HARDENING_POSTMORTEM_2026-04-15.md  DoS_Results.md  Final_Engineering_Report.md  GITHUB_ADVANCED_SCAN_2026-03-15.md  QA_Audit_Clippy_and_Dependencies.md  REPOSITORY_FILE_ROLES_2026-03-15.md  SBOM.md  SECURITY_HARDENING_2026-03-15.md
docs/releases/: 2.0.1.md
docs/security-advisories/: SECURITY_ADVISORY_TEMPLATE_AR.md  SECURITY_ADVISORY_TEMPLATE_EN.md
docs/wiki/: Home.md  README.md  WIKI_HOME_TEMPLATE.md  _Sidebar.md  _Sidebar_AR.md  _Sidebar_EN.md  ar.md  en.md
docs/wiki/ar/: 01-Quick-Start.md  01-البدء-السريع.md  02-Architecture.md  02-المعمارية.md  03-Security-Deep-Dive.md  03-التعمق-الأمني.md  04-API-Guide.md  04-دليل-API.md  05-Deployment-and-Operations.md  05-النشر-والتشغيل.md  06-Testing-and-Quality.md  06-الاختبارات-والجودة.md  07-FAQ-and-Troubleshooting.md  07-الأسئلة-الشائعة-وحل-المشاكل.md  08-SEO-and-Documentation-Strategy.md  Home.md  الرئيسية.md
docs/wiki/en/: 01-Quick-Start.md  02-Architecture.md  03-Security-Deep-Dive.md  04-API-Guide.md  05-Deployment-and-Operations.md  06-Testing-and-Quality.md  07-FAQ-and-Troubleshooting.md  08-SEO-and-Documentation-Strategy.md  Home.md
examples/: using_lib.rs
include/: mkt_ksa_geo_sec.h
scripts/: prepare_release.ps1  verify_endpoints.ps1
scripts/ci/: cleanup_workspace.sh
scripts/security/: README.md  common.py  phase_10m_split.py  phase_a_strict.py  phase_b_hostile.py  run_security_cycle.sh
src/: app_state.rs  lib.rs  main.rs
src/api/: alerts.rs  auth.rs  behavior.rs  cloud_manager.rs  crash_protection.rs  dashboard.rs  device.rs  geo.rs  mod.rs  network.rs  performance_monitor.rs  sensors.rs  smart_access.rs  std_http.rs  weather.rs
src/api/std_http/: email.rs  http.rs  io.rs  oauth.rs  parser.rs  router.rs  security.rs  tests.rs  types.rs  utils.rs
src/api/std_http/handlers/: alerts.rs  anti_replay.rs  backup.rs  cloud.rs  export.rs  features.rs  fw.rs  keys.rs  memory.rs  policy.rs  telemetry.rs  templates.rs  webhook.rs  webhook_guard.rs
src/core/: behavior_bio.rs  composite_verification.rs  cross_location.rs  device_fp.rs  digest.rs  geo_db.rs  geo_resolver.rs  history.rs  mod.rs  network_analyzer.rs  sensors_analyzer.rs  weather_val.rs
src/crypto/: aad.rs  ai.rs  device_binding.rs  envelope.rs  hmac_pure.rs  key_rotation.rs  keystore.rs  mod.rs  policy.rs  selector.rs  sha512_pure.rs  traits.rs
src/db/: crud.rs  migrations.rs  mod.rs  models.rs
src/db/migrations/: 0001_initial.sql  0002_indexes.sql
src/ffi/: mod.rs
src/log/ledger/: anchor.rs  digest.rs  entry.rs  errors.rs  mod.rs  verify.rs  writer.rs
src/oauth2/: adaptive.rs  ai.rs  clients.rs  core.rs  endpoints.rs  flows.rs  grants.rs  guards_oauth2.rs  introspection.rs  mod.rs  security.rs  tokens.rs  userinfo.rs
src/security/: ai_guard.rs  crypto_provider.rs  fingerprint.rs  input_validator.rs  inspection.rs  inspection_policy.rs  jwt.rs  mod.rs  policy.rs  ratelimit.rs  request_guard.rs  secret.rs  signing.rs
src/security/crypto_smart/: aad.rs  envelope.rs  keystore.rs  mod.rs  traits.rs
src/security/egress_guard/: errors.rs  http_client.rs  mod.rs  parser.rs  policy.rs  resolver.rs
src/security/jws/: canonicalize.rs  errors.rs  key.rs  mod.rs
src/telemetry/: mod.rs
src/utils/: cache.rs  helpers.rs  logger.rs  mod.rs  precision.rs  rle.rs
src/webhook/: mod.rs
src/webhook/guards/: ai_feedback.rs  ai_ingest.rs  ai_model_update.rs  alerts_disable.rs  alerts_in.rs  alerts_set.rs  anti_replay_purge_config.rs  anti_replay_purge_disable.rs  anti_replay_purge_run.rs  anti_replay_purge_status.rs  backup_consent.rs  backup_download.rs  backup_email.rs  backup_schedule.rs  backup_schedule_disable.rs  backup_send.rs  cloud_push.rs  dashboard.rs  events_ndjson.rs  export_csv.rs  fw_close.rs  fw_metrics.rs  fw_open.rs  geo_maplayer.rs  geo_satellite.rs  keys_auto_config.rs  keys_auto_disable.rs  keys_create.rs  keys_export_hex.rs  keys_meta.rs  keys_rotate.rs  memory_config.rs  memory_purge.rs  memory_status.rs  metrics.rs  mod.rs  oauth2_authorize.rs  oauth2_introspect.rs  oauth2_revoke.rs  oauth2_token.rs  (+16 more)
target_local/: .rustc_info.json
target_local/debug/: libmkt_ksa_geo_sec.d  mkt_ksa_geo_sec.d
tests/: api_concurrent_guest_and_attack_integration.rs  api_integration_auth_rate_limit_db.rs  api_request_id_propagation_integration.rs  api_security_surface_integration.rs  fuzz_like.rs
tests/support/: mod.rs
(+178 files in other folders)
