[package]
name = "MKT_KSA_Geolocation_Security"
version = "1.0.2"
authors = ["Mansour Khalid <mkt-edge@outlook.sa>"]
edition = "2021"
license = "Apache-2.0"
description = "Smart geolocation & behavioral security library for Rust"
readme = "README.md"
repository = "https://github.com/mktmansour/MKT-KSA-Geolocation-Security"
categories = ["network-programming", "authentication", "cryptography"]
keywords = ["geolocation", "behavior", "device-fingerprint", "rate-limiting", "security"]
documentation = "https://docs.rs/MKT_KSA_Geolocation_Security"
exclude = [
  ".github/**",
  ".cargo-home/**",
  "target/**",
  "docs/**",
  "archive/**",
  ".env",
  ".env.example",
  "dashboard.html",
  "GeoLite2-City-Test.mmdb",
  "AI_Development_Log.md",
  "Dockerfile",
  "CONTRIBUTING.md",
  "SECURITY.md",
  "cbindgen.toml",
  "rust-toolchain.toml",
  "tests/**",
  "benches/**",
  "examples/**",
  "scripts/**",
  ".vscode/**",
  ".idea/**",
  ".gitattributes",
  ".gitignore",
  "deny.toml",
  "*.png",
  "*.jpg",
  "*.jpeg",
  "*.gif",
  "*.psd",
]

[[bin]]
name = "MKT_KSA_Geolocation_Security"
path = "src/main.rs"
required-features = ["core_full", "api_std_http"]

[[bin]]
name = "std_dashboard_demo"
path = "src/bin/std_dashboard_demo.rs"
required-features = ["api_std_http", "sign_hmac", "sign_host"]

[[bin]]
name = "hmac_client"
path = "src/bin/hmac_client.rs"
required-features = ["sign_hmac", "sign_host"]

[lib]
name = "mkt_ksa_geo_sec"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]

[features]
default = []
# Consolidated features (no external deps retained)
sign_hmac = ["dep:hmac", "dep:sha2"]
sign_host = []
oauth2 = []
ledger_blake3 = []
ffi_c = []

## Functional areas (internal only, no external deps)
egress = []
api_std_http = []
compress_rle = []
smtp_std = []
egress_http_std = ["egress"]

# Core features that are actually used
core_full = []
jwt = []
validation = []
jws = []
serde = []
secure_secrecy = []
webhook_out = []
egress_url = []
egress_reqwest = []
uuid_fmt = []
parallel = []
webhook_in = []

# Zero-deps core can opt-in to utilities (no external deps retained)
core_utils = []

# Input validation & sanitization
input_validation = []

# Config loader (binary/demo only)
config_loader = []

[profile.release]
# Arabic: تحسينات إصدار متوازنة للأداء والحجم دون المساس بالأمان
# English: Balanced release optimizations for performance and size without compromising security
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
