[package]
name = "MKT_KSA_Geolocation_Security"
version = "2.0.1"
authors = ["Mansour Khalid <mkt-edge@outlook.sa>"]
edition = "2021"
license = "Apache-2.0"
description = "Smart geolocation & behavioral security library for Rust"
readme = "README.md"
repository = "https://github.com/mktmansour/MKT-KSA-Geolocation-Security"
categories = ["network-programming", "authentication", "cryptography"]
keywords = ["geolocation", "behavior", "device-fingerprint", "rate-limiting", "security"]
include = [
	"/Cargo.toml",
	"/Cargo.lock",
	"/README.md",
	"/README_AR.md",
	"/LICENSE",
	"/CHANGELOG.md",
	"/SECURITY.md",
	"/cbindgen.toml",
	"/rust-toolchain.toml",
	"/src/**",
	"/examples/**",
]

[lib]
name = "mkt_ksa_geo_sec"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
rayon = "1.11.0"
actix-web = "4.0"
actix-rt = "2.10"
html-escape = "0.2.13"
anyhow = "1.0.99"
async-trait = "0.1"
config = "0.15.17"
futures = "0.3"
log = "0.4.28"

# Database
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }

# Crypto & Security
aes-gcm = "0.10.3"
secrecy = { version = "0.10.3", features = ["serde"] }
zeroize = { version = "1.8.1", features = ["derive"] }
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.9"
blake3 = "1.8.2"
base64 = "0.22.1"
pqcrypto-mlkem = "0.1.1"
unicode-normalization = "0.1.24"
validator = "0.20"
regex = "1.12.2"
lru = "0.16.3"
subtle = "2.6.1"

cfg-if = "1.0.4"
rand_core = "0.9.5"
chrono = { version = "0.4", features = ["serde"] }

# Utilities
serde_json = "1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.17"
maxminddb = { version = "0.27.0", features = ["mmap"] }
pqcrypto-traits = "0.3.5"
tokio-rusqlite = "0.6.0"
rusqlite = "0.37.0"

[dev-dependencies]
proptest = "1.7.0"
rstest = "0.26.1"
assert-json-diff = "2.0"

[features]
default = ["db-sqlite"]
db-sqlite = []
v1_1 = []
v2_0 = []
v3_0 = []
quantum = []
adaptive = []
predictive = []
autonomous_vehicles = []
generative_ai = []
blockchain = []
zkp = []
quantum_computing = []
ar_integration = []
gpu = []
